// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.github.name.help"
    id="github.name"
    onFieldChange={[MockFunction]}
    propKey="key"
    value=""
  />
  <AlmDefinitionFormField
    help={
      <FormattedMessage
        defaultMessage="settings.pr_decoration.form.url.github.help"
        id="settings.pr_decoration.form.url.github.help"
        values={
          Object {
            "example": "https://github.company.com/api/v3",
          }
        }
      />
    }
    id="url.github"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value=""
  />
  <AlmDefinitionFormField
    id="app_id"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="appId"
    value=""
  />
  <AlmDefinitionFormField
    id="private_key"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="privateKey"
    value=""
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<Fragment>
  <AlmDefinitionFormField
    autoFocus={true}
    help="settings.pr_decoration.form.github.name.help"
    id="github.name"
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmDefinitionFormField
    help={
      <FormattedMessage
        defaultMessage="settings.pr_decoration.form.url.github.help"
        id="settings.pr_decoration.form.url.github.help"
        values={
          Object {
            "example": "https://github.company.com/api/v3",
          }
        }
      />
    }
    id="url.github"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value="http://github.enterprise.com"
  />
  <AlmDefinitionFormField
    id="app_id"
    maxLength={80}
    onFieldChange={[MockFunction]}
    propKey="appId"
    value="123456"
  />
  <AlmDefinitionFormField
    id="private_key"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    propKey="privateKey"
    value="asdf1234"
  />
</Fragment>
`;
